--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -22,9 +22,9 @@
             <li id="to-right">
                <a href="/signin">SignIn</a> <span> | </span>
             </li>
-            {{!-- <li id="to-right">
+            <li id="to-right">
                   <a href="/logout">Logout</a> <span> | </span>
-            </li> --}}
+            </li>
          </ul>
       </nav> 
      
