--- a/views/auth/signin.hbs
+++ b/views/auth/signin.hbs
@@ -1,8 +1,12 @@
-<form >
+<form action="/signin" method="POST">
   <label>Email</label>
-  <input type="email" name="email" placeholder="Enter your email"  >
+  <input   type="email" name="email" placeholder="Enter your email"  >
 
   <label>Password</label>
-  <input type="password" name="password" placeholder="Enter your Password"  >
+  <input  type="password" name="password" placeholder="Enter your Password"  >
   <button type="submit" >Sign In</button>
 </form>
+{{!-- Conditionally render the msg --}}
+{{#if msg}}
+ <div class="error">{{msg}}</div>
+{{/if}}
